@@ -93,11 +93,16 @@ function addScreenRow(array $screen, $row_num) {
 	unset($screen_item);
 
 	DBstart();
-	$result = API::Screen()->update([
+	$options = [
 		'screenid' => $screen['screenid'],
 		'vsize' => $screen['vsize'] + 1,
 		'screenitems' => $screen['screenitems']
-	]);
+	];
+
+	$result = ($screen['templateid'] != 0)
+		? API::TemplateScreen()->update($options)
+		: API::Screen()->update($options);
+
 	if ($result) {
 		add_audit_details(AUDIT_ACTION_UPDATE, AUDIT_RESOURCE_SCREEN, $screen['screenid'], $screen['name'],
 			_('Row added')
@@ -121,11 +126,16 @@ function addScreenColumn(array $screen, $col_num) {
 	unset($screen_item);
 
 	DBstart();
-	$result = API::Screen()->update([
+	$options = [
 		'screenid' => $screen['screenid'],
 		'hsize' => $screen['hsize'] + 1,
 		'screenitems' => $screen['screenitems']
-	]);
+	];
+
+	$result = ($screen['templateid'] != 0)
+		? API::TemplateScreen()->update($options)
+		: API::Screen()->update($options);
+
 	if ($result) {
 		add_audit_details(AUDIT_ACTION_UPDATE, AUDIT_RESOURCE_SCREEN, $screen['screenid'], $screen['name'],
 			_('Column added')
@@ -152,11 +162,16 @@ function delScreenRow(array $screen, $row_num) {
 	unset($screen_item);
 
 	DBstart();
-	$result = API::Screen()->update([
+	$options = [
 		'screenid' => $screen['screenid'],
 		'vsize' => $screen['vsize'] - 1,
 		'screenitems' => $screen['screenitems']
-	]);
+	];
+
+	$result = ($screen['templateid'] != 0)
+		? API::TemplateScreen()->update($options)
+		: API::Screen()->update($options);
+
 	if ($result) {
 		add_audit_details(AUDIT_ACTION_UPDATE, AUDIT_RESOURCE_SCREEN, $screen['screenid'], $screen['name'],
 			_('Row deleted')
@@ -183,11 +198,16 @@ function delScreenColumn(array $screen, $col_num) {
 	unset($screen_item);
 
 	DBstart();
-	$result = API::Screen()->update([
+	$options = [
 		'screenid' => $screen['screenid'],
 		'hsize' => $screen['hsize'] - 1,
 		'screenitems' => $screen['screenitems']
-	]);
+	];
+
+	$result = ($screen['templateid'] != 0)
+		? API::TemplateScreen()->update($options)
+		: API::Screen()->update($options);
+
 	if ($result) {
 		add_audit_details(AUDIT_ACTION_UPDATE, AUDIT_RESOURCE_SCREEN, $screen['screenid'], $screen['name'],
 			_('Column deleted')
